--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -50,7 +50,7 @@
       / header
       %main.main
         .container
-          .row
+          .row-fluid
             .span12
               :php
                 if(isset($this->breadcrumbs)){
