--- a/themes/bootstrap/sass/catalog.scss
+++ b/themes/bootstrap/sass/catalog.scss
@@ -95,6 +95,14 @@
         }
       }
     }
+    .properties{
+      .item-property{
+        margin-bottom: 20px;
+        .h3 {
+          margin-top: 0;
+        }
+      }
+    }
   }
   .left-bar{
     .main-features-item{
