--- a/themes/bootstrap/sass/home.scss
+++ b/themes/bootstrap/sass/home.scss
@@ -27,12 +27,62 @@ body{
         width: auto;
       }
     }
+    .main-menu {
+      @media (max-width: 480px){
+        position: fixed;
+        height: auto;
+        min-height: 1000px;
+        z-index: 1000;
+        width: 262px;
+        border: 1px solid #ccc;
+        background: #f3f3f3;
+        color: rgba(0, 0, 0, 0.6);
+        top: 0px;
+        left: -270px;//0px;
+        @include transition-property(left);
+        @include transition-duration(.3s);
+        @include transition-timing-function(ease-out);
+        &.open{
+          left: 0px;
+        }
+        @include box-shadow(rgba(0, 0, 0, 0.3) 5px 0 8px);
+        >.nav{
+          margin-bottom: 0;
+          margin-top: 20px;
+          >li{
+            border-bottom: 1px solid #e4e4e4;
+            >a{
+              color: inherit;
+              padding: 9px 20px;
+              @include text-shadow(rgb(255, 255, 255) 0px 1px 0px);
+              &:hover{
+                background-color: rgba(238, 238, 238, .9);
+              }
+            }
+          }
+        }
+      }
+    }
     .country{
       >li{
         >a{
           padding: 12.5px 6px 12.5px;
           >img{
             padding-bottom: 2px;
+          }
+        }
+      }
+    }
+    .main-menu-show{
+      display: none;
+      @media (max-width: 480px){
+        display: block;
+        .active-menu{
+          .fa-align-justify{
+            &:before{
+              content: "\2715";
+              font-size: 1.2em;
+            }
           }
         }
       }
@@ -49,11 +99,6 @@ body{
     }
   }
 
-  .nav-collapse, .nav-collapse.collapse {
-    @media (max-width: 767px){
-      position: absolute;
-    }
-  }
   .head{
     margin-top: 65px;
     .logo{
