--- a/themes/bootstrap/sass/_base.scss
+++ b/themes/bootstrap/sass/_base.scss
@@ -74,6 +74,20 @@ $arrow-sprite: sprite-map("arrow-slider/*.png", $position: 100%, $spacing: 5px, 
   }
 }
 
+@mixin hide-box(){
+  @include hide-text();
+  overflow: hidden;
+  height: 0px;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  min-height: 0;
+  border: none;
+  position: absolute;
+  left: -1000px;
+  z-index: -1;
+}
+
 .h1 {
   color: #9D9D00;
   font-size: 24px;
