--- a/themes/bootstrap/sass/_base.scss
+++ b/themes/bootstrap/sass/_base.scss
@@ -116,7 +116,7 @@ ul.checkarrow{
 }
 .line{
   height: 1px;
-  margin: 25px auto;
+  margin: 10px auto 25px auto;
   overflow: hidden;
 }
 .line-dotted{
