--- a/protected/modules/languages/widgets/langSwitch/assets/css/langswitch.css
+++ b/protected/modules/languages/widgets/langSwitch/assets/css/langswitch.css
@@ -1,2 +1,16 @@
-.navbar .country > li > a {
-  padding: 12.5px 6px 12.5px; }
+.langswitch img{
+  vertical-align: inherit;
+}
+
+.navbar .langswitch .label-switch{
+  line-height: 45px;
+  color: #999;
+}
+
+.navbar .langswitch img{
+  vertical-align: middle;
+}
+
+.navbar .country > li > a{
+  padding: 12.5px 6px 12.5px;
+}
